fix: wrap elements of product name

--- a/backend/public/css/table.css
+++ b/backend/public/css/table.css
@@ -61,6 +61,18 @@
   white-space: nowrap;
 }
 
+.products-table .product-name-cell {
+  max-width: 200px;
+  width: 200px;
+}
+
+.products-table .product-name {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .products-table tr td.email {
   text-transform: lowercase;
 }
@@ -177,7 +189,7 @@
 
 .thumbnail {
   width: 50px;
-  height: 90px;
+  height: 105px;
   margin-right: 5px;
   overflow: hidden;
   border-radius: 5px;
